Update GameManager.java